# vision-cursor

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc  vision_cursor.rc
src/: CMakeLists.txt  main.cpp
src/algorithm/: CMakeLists.txt
src/algorithm/filter/: ema_filter.hpp  filter.h  kalman_filter.hpp  one_euro_filter.hpp  sma_filter.hpp
src/common/: CMakeLists.txt  common.h  constants.h  defines.h  frame.h  paths.hpp  structs.h  types.h
src/config/: CMakeLists.txt  config_utils.cpp  config_utils.h  core_config.cpp  core_config.h  fsm_config.cpp  fsm_config.h  structs.h
src/core/: CMakeLists.txt  vision_cursor_orchestrator.cpp  vision_cursor_orchestrator.h
src/device/: CMakeLists.txt  mouse_controller.h
src/device/platform/: mouse_windows.cpp
src/interaction/: CMakeLists.txt  interaction_controller.cpp  interaction_controller.h
src/interaction/action/: action.h
src/interaction/factory/: state_machine_factory.cpp  state_machine_factory.h
src/interaction/fsm/: state_machine.cpp  state_machine.h  transition.h
src/interaction/rule/: composite_rule.cpp  composite_rule.h  rule.h  single_rule.cpp  single_rule.h
src/log/: CMakeLists.txt  logging.cpp  logging.h
src/mapping/: CMakeLists.txt  action_mapper.cpp  action_mapper.h
src/mediapipe/: CMakeLists.txt  mediapipe_hand_detector.cpp  mediapipe_hand_detector.h
src/ui/: CMakeLists.txt  information_page.cpp  information_page.h  information_page.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  monitor_page.cpp  monitor_page.h  monitor_page.ui  scheme_control_page.cpp  scheme_control_page.h  scheme_control_page.ui  setting_page.cpp  setting_page.h  setting_page.ui  single_instance.hpp  video_opengl_widget.cpp  video_opengl_widget.h
src/utils/: CMakeLists.txt  math.hpp  to_string.cpp  to_string.h  utils.h  video.cpp  video.h  visualizer.cpp  visualizer.h
src/vision/: CMakeLists.txt  camera_device.cpp  camera_device.h  camera_manager.cpp  camera_manager.h  opencv_frame.cpp  opencv_frame.h
tests/: CMakeLists.txt
tests/fixture/: CMakeLists.txt  test_helpers.cpp  test_helpers.h  vision_cursor_test_fixture.cpp  vision_cursor_test_fixture.h
tests/integration/: CMakeLists.txt  tst_all_modules.cpp  tst_hand_landmark.cpp
tests/results/: tst_calculate_reference_length_func.md  tst_each_filter_math.md  tst_each_filter_math_overall.md
tests/unit/: CMakeLists.txt
tests/unit/algorithm/: tst_each_filter_math.cpp  tst_each_filter_visual.cpp
tests/unit/config/: tst_core_config.cpp  tst_fsm_config.cpp
tests/unit/core/: tst_core_orchestrator.cpp
tests/unit/device/: tst_mouse_controller.cpp
tests/unit/interaction/: tst_calculate_reference_length_func.cpp  tst_interaction_controller.cpp  tst_state_machine_scheme.cpp
tests/unit/mapping/: tst_action_mapper.cpp
tests/unit/mediapipe/: tst_mediapipe_hand_detector.cpp
tests/unit/vision/: tst_camera_basic.cpp  tst_camera_device.cpp  tst_camera_manager.cpp
